@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX 3.0.17-file-caching.patch 500 SHA256 6b15cf3064be67871489446f2ad3c3ce4eb1f5912d70f79fd2148ffb1261e9c6 SHA512 7218feb7ddf0d6ecb11cc4b9cfbe1208e8d963be481fa71f227e47b4cceb0341324bcd876a233dd7082544af76c45e4c457ad666000fb13d2555d07de45c193f WHIRLPOOL 68100510e89950257150d048d07daaf02e80f35ff9b6df73499fd2124c839a7ec4e316682d2439727dbc716e28ff647845af4533e0e83df3ac4194f5085e0a23
 AUX 3.1.10-file-caching.patch 500 SHA256 6b15cf3064be67871489446f2ad3c3ce4eb1f5912d70f79fd2148ffb1261e9c6 SHA512 7218feb7ddf0d6ecb11cc4b9cfbe1208e8d963be481fa71f227e47b4cceb0341324bcd876a233dd7082544af76c45e4c457ad666000fb13d2555d07de45c193f WHIRLPOOL 68100510e89950257150d048d07daaf02e80f35ff9b6df73499fd2124c839a7ec4e316682d2439727dbc716e28ff647845af4533e0e83df3ac4194f5085e0a23
@@ -47,13 +47,14 @@ EBUILD lh-sources-3.4.2-r1.ebuild 927 SHA256 61248830d30060260c78b933df128fed2ab
 EBUILD lh-sources-3.4.2.ebuild 927 SHA256 5453b3a7b227e64c8cfcde1315a08af0a420287a665845a732004c60466c8211 SHA512 e54fb1a02d6e90aa8ff2a8e114e541c39636a8bed6db1bfa1edce517ec101dddee3ad436484528c8286a4884c9c40643fe71e4ef5f5f94ebf7a9a5f2046e13db WHIRLPOOL bb0422dca7b8455237faafb24c1d582bb280ca1e464642480f5e570c9afb00a3e605ee0ce6a990ae83f44221d581d1910ea47434a7e3d8c0212b6443408710c4
 EBUILD lh-sources-3.4.3.ebuild 927 SHA256 a70e9d03bdce7dcd52bb47bc811af1b0e424a7e057a723294f01e7471ba0225f SHA512 e3c09409adca8462b574b28005c4852b443eb03bdd21630277316672e853ba8b94234c6cf8a01bb458be86c06c75d36e006ec0aaadda3c19c284e5d45d15a6d7 WHIRLPOOL c4bda91c779c253e860aed474c7b832b21b43e71c3bbeb17057c0ecec4363c86774e4e7561a62b05b06563a9f575302d9b4c54fbbbb603bc54949f6661cd78c5
 EBUILD lh-sources-3.4.4.ebuild 927 SHA256 92b1d460500ae0be85ba7c2f31e8d454729bf08360d4c16993c72975afcdfa38 SHA512 3dade4040c06fdaa073d3958bdc64de3f56a0c9d7b636906c43aae4213f68198660e6ede15ba6233b7db61b500096bd6b0eafc020c4557043cfaaddccb2e0499 WHIRLPOOL cbadf519deefc9e7b232882b8a2d8f996104fabd0dbfed1d8b4f9e978b2e1f27dc43fd1c2a8244cbd91285a9ee1ee978b8228c2f265e843a293aee86d70d2da4
-MISC ChangeLog 10596 SHA256 a580bad45522893d3432df3f66d5445ad1315a1a679c53b512acae0a78d11341 SHA512 fa02b345e5896adb8fa23476c414cdde8bc8b6988252248ad5e2ac246bf19d4e0ea0dbddb29cef2eed77f1b31054a87d126471df957593d92ba0fba0b76a8971 WHIRLPOOL d81683ba008114dc0eec756f7ca41ba8f2edd93436c3933a44c060be529b902562dd2a8a7441acc9633dfb3921e6aae0526b74565b78586ee6d529a15c6517d7
+EBUILD lh-sources-3.4.5.ebuild 927 SHA256 92b1d460500ae0be85ba7c2f31e8d454729bf08360d4c16993c72975afcdfa38 SHA512 3dade4040c06fdaa073d3958bdc64de3f56a0c9d7b636906c43aae4213f68198660e6ede15ba6233b7db61b500096bd6b0eafc020c4557043cfaaddccb2e0499 WHIRLPOOL cbadf519deefc9e7b232882b8a2d8f996104fabd0dbfed1d8b4f9e978b2e1f27dc43fd1c2a8244cbd91285a9ee1ee978b8228c2f265e843a293aee86d70d2da4
+MISC ChangeLog 10718 SHA256 d761e14b1a9d0bebd8aa75aeee43c3081e1c1e1218350f573ba4f345bb31b3eb SHA512 5db3d92c3c65121992d653783f7e4a2a1ab6bc0484b97e27b1efd3a4de0ca760037209c66316804a4316ec2992216c18800425e2758d5cf05e4af59cd6f56b59 WHIRLPOOL 6fc8c18257519b8d40599bc1cb6a35aa49b4363f0c841f505978065f788a02bcca21ecbf6ec855a9d136b834c6fd22a8e526046107d3e980b0a9cfea829b2735
 MISC metadata.xml 322 SHA256 576a908a4ed2228217d564ba7c2e1b3173ceacfc88258073d9b07698746870dc SHA512 001fce1594b001c9864d86024c45a1560b651e7dda5d81ad8190ea62c88ad48d79867a66cceb2e108e35d6c7d386799d5a3a9d705c8c3beb0c26cdb9b3b94007 WHIRLPOOL 8b233ac46194ab42d98d89be79df6b7f21843923bb9502336a8504a2e5c4de5f3d908de11baf2cf48adf04ab1b16b034707a3d4a1d8746c29bbc9574cd7248cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 Comment: GPGTools - http://gpgtools.org
 
-iEYEAREKAAYFAk/mwXcACgkQgAnW8HDreRYwmQCgzRpGA3z8jK0VZx9Vg3omiVID
-x/cAmwWFz/MVvJe0RZbhr6EM2vorkYoP
-=u7QO
+iEYEAREIAAYFAlAGXWwACgkQgAnW8HDreRY+ZwCfXWyaQzZoW+ql4ElkCZ+qHUbM
+izoAoIxpX6crS+2VghIMFMJEOfT1I3lc
+=Vva/
 -----END PGP SIGNATURE-----
